<resources>
    <string name="app_name">Foodies5</string>
    <string name="title_activity_home_screen_btmnav">MainActivity</string>
    <string name="title_home">Home</string>
    <string name="title_search">Search</string>
    <string name="title_profile">Profile</string>
    <string name="title_videos_img">Videos_Img</string>
    <string name="s1_Name">Name</string>
    <string name="s1_email">Email</string>
    <string name="s1_website">Website</string>
    <string name="s1_status">Status</string>
    <string name="fav_restaurant">Your recommendations about a particular restaurant</string>
    <string name="fav_food">Favourite Food</string>
    <string name="add_profile_photo">Add profile photo</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_google_maps">Map</string>
    <string name="title_activity_google__maps">Map</string>
    <string name="Normal_Map">Normal Map</string>
    <string name="Hybrid_Map">Hybrid Map</string>
    <string name="Terrain_Map">Terrain Map</string>
    <string name="Satellite_Map">Satellite Map</string>
    <string name="text">TEXT</string>
    <string name="address">ADDRESS</string>
    <string name="continue_with_user_location">Continue with user location</string>
    <string name="set_my_location">set my location</string>
    <string name="recent_locations">RECENT LOCATIONS</string>
    <string name="destination_address">ADD A DESTINATION ADDRESS</string>
    <string name="title_activity_set_my_location">Map</string>
    <string name="view_details">View Details</string>
    <string name="menu">MENU</string>
    <string name="j_s">J\'s</string>
    <string name="sharma_bhel_puri">sharma bhel puri</string>
    <string name="gajalee">gajalee</string>
    <string name="items">items</string>
    <string name="total_price">Total Price</string>
    <string name="order">PLACE ORDER</string>
    <string name="my_bill">My bill</string>
    <string name="select_payment_method">select payment method</string>
    <string name="Select_payment_method">SELECT PAYMENT METHOD</string>
    <string name="ok">OK</string>
    <string name="cancel">Cancel</string>
    <string name="title_activity_top_restaurants_details">top_restaurants_details</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_self_sub">Self Sub</string>
    <string name="menu_meals">Meals</string>
    <string name="subway">SUBWAY</string>
    <string name="subwraps">SUBWRAPS</string>
    <string name="mini_sub_combo">Mini Sub Combo</string>
    <string name="cookies">Cookies</string>
    <string name="contact">Contact</string>
    <string name="top_restaurants">TOP RESTAURANTS</string>
    <string name="come_eat_have_fun">Come Eat Have Fun</string>
    <string name="how_can_we_help_you">How can we help you?</string>
    <string name="title_activity_display_route">Map</string>
    <string name="title_activity_show_directions_on_place_order">Map</string>


</resources>