<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">

        <item
            android:title="@string/subway">

            <menu>
        <item
            android:id="@+id/navigation_home_side_nav_top_res"
            android:icon="@drawable/ic_baseline_home_24"
            android:title="@string/menu_home" />
        <item
            android:id="@+id/nav_self_sub"
            android:icon="@drawable/ic_baseline_add_shopping_cart_24"
            android:title="@string/menu_self_sub" />

        <item
            android:id="@+id/nav_meals"
            android:icon="@drawable/ic_baseline_fastfood_24"
            android:title="@string/menu_meals"
            />
         <item
             android:id="@+id/nav_contact"
             android:icon="@drawable/ic_baseline_contact_support_24"
             android:title="@string/contact"    />
                

            </menu>

        </item>
    </group>
</menu>