<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.profile.profile_fragment"
    android:fitsSystemWindows="true"
    android:background="@drawable/profile_bg"
    android:orientation="vertical"
    >
<ScrollView
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        >
    <com.mikhaellopez.circularimageview.CircularImageView
        android:id="@+id/add_photo"
        android:layout_width="140dp"
        android:layout_height="155dp"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_gravity="center"
        android:layout_marginTop="20dp"
        android:layout_marginBottom="15dp"
        android:src="@drawable/ic_baseline_perm_identity_24"
        app:civ_border_color="@android:color/holo_purple"
        app:civ_border_width="5dp" />

    <TextView
        android:id="@+id/textView5"
        android:layout_width="266dp"
        android:layout_height="44dp"
        android:fontFamily="@font/audiowide"
        android:gravity="center"
        android:text="Profile"
        android:textColor="@android:color/holo_blue_dark"
        android:textSize="25dp"
        android:textStyle="bold"
        android:layout_gravity="center"
        android:layout_marginBottom="25dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.496"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.241" />

    <EditText
        android:id="@+id/pname"
        android:layout_width="match_parent"
        android:layout_height="56dp"
        android:ems="10"
        android:hint="@string/s1_Name"
        android:inputType="textPersonName"
        android:background="@drawable/edit_round_three"
        android:layout_marginBottom="25dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.292" />

    <EditText
        android:id="@+id/email"
        android:layout_width="match_parent"
        android:layout_height="58dp"
        android:ems="10"
        android:hint="@string/s1_email"
        android:inputType="textPersonName"
        android:background="@drawable/edit_round_three"
        android:layout_marginBottom="25dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.388" />

    <EditText
        android:id="@+id/website"
        android:layout_width="match_parent"
        android:layout_height="56dp"
        android:layout_marginBottom="25dp"
        android:ems="10"
        android:hint="@string/s1_website"
        android:background="@drawable/edit_round_three"
        android:inputType="textPersonName"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/email"
        app:layout_constraintVertical_bias="0.196" />

    <EditText
        android:id="@+id/status"
        android:layout_width="match_parent"
        android:layout_height="56dp"
        android:background="@drawable/edit_round_three"
        android:ems="10"
        android:hint="@string/s1_status"
        android:inputType="textPersonName"
        android:layout_marginBottom="25dp"
         />


<EditText
        android:id="@+id/fav_rest"
        android:layout_width="match_parent"
        android:layout_height="56dp"
        android:ems="10"
        android:hint="@string/fav_restaurant"
        android:inputType="textPersonName"
        android:layout_marginBottom="25dp"
    android:background="@drawable/edit_round_three"
        android:scrollbarAlwaysDrawHorizontalTrack="true"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/status"
        app:layout_constraintVertical_bias="0.075" />
        <EditText
            android:id="@+id/fav_food"
            android:layout_width="match_parent"
            android:layout_height="64dp"
            android:ems="10"
            android:hint="@string/fav_food"
            android:inputType="textPersonName"
            android:background="@drawable/edit_round_three"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/fav_rest"
            app:layout_constraintVertical_bias="0.109" />
    </LinearLayout>
</ScrollView>
</LinearLayout>