<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="bottom"
    android:padding="30dp"
    app:cardCornerRadius="4dp"
    android:clipToPadding="true"
    >
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:background="#EAE7E7"

        >

        <RadioGroup
            android:layout_width="match_parent"
            android:layout_height="180dp"
            android:divider="#D8CFCF"
            android:showDividers="middle"
            >

                <RadioButton
                    android:id="@+id/continue_user_location"
                    android:layout_width="410dp"
                    android:layout_height="80dp"
                    android:fontFamily="@font/creepster"
                    android:padding="7dp"
                    android:text="@string/continue_with_user_location"
                    android:textAllCaps="true"
                    android:textColor="#651FFF"
                    android:textSize="24sp"
                    android:textStyle="bold"
                    app:layout_constraintBottom_toTopOf="@+id/pick_my_location"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.0"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    android:drawableEnd="@drawable/ic_baseline_my_location_24"
                    app:layout_constraintVertical_bias="0.0"

                    />

                <RadioButton
                    android:id="@+id/pick_my_location"
                    android:layout_width="410dp"
                    android:layout_height="60dp"
                    android:fontFamily="@font/creepster"
                    android:padding="7dp"
                    android:text="@string/set_my_location"
                    android:textAllCaps="true"
                    android:textColor="#651FFF"
                    android:textSize="24sp"
                    android:textStyle="bold"
                    android:drawableEnd="@drawable/ic_baseline_edit_location_24"
                    android:layout_marginTop="15dp" />


        </RadioGroup>
        <TableRow
            android:id="@+id/hr2"
            android:layout_width="match_parent"
            android:layout_height="2dp"
            android:background="#D8CFCF"
            android:visibility="visible" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:layout_marginTop="18dp"
            android:text="@string/recent_locations"
            android:textAllCaps="true"
            android:textColor="#651FFF"
            android:textSize="19sp"
            android:textStyle="bold"
            />
<!--        <TextView-->
<!--            android:layout_width="match_parent"-->
<!--            android:layout_height="60dp"-->
<!--            android:layout_marginTop="15dp"-->
<!--            -->
<!--            android:textAllCaps="true"-->
<!--            android:textColor="#651FFF"-->
<!--            android:textSize="21sp"-->
<!--            android:textStyle="bold"-->
<!--            android:paddingStart="20dp"-->
<!--            tools:ignore="RtlSymmetry" />-->


        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/recview_recent_locations"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="15dp"
            android:orientation="vertical"
            />



    </LinearLayout>

</androidx.cardview.widget.CardView>