<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent"

    >

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fillViewport="true"
        >

   <LinearLayout
       android:layout_width="match_parent"
       android:layout_height="match_parent"
       android:orientation="vertical"
       android:background="#E2F6F3"

       >


       <androidx.cardview.widget.CardView
           android:layout_width="match_parent"
           android:layout_height="72dp"
           android:layout_margin="13dp"
           tools:ignore="MissingConstraints"
           app:cardCornerRadius="7dp"
           app:cardBackgroundColor="#fff"
           >

           <LinearLayout
               android:layout_width="match_parent"
               android:layout_height="match_parent"
               android:orientation="vertical"
               android:background="#B9E8EF"
               >
               <TextView
                   android:layout_width="match_parent"
                   android:layout_height="match_parent"
                   android:text="@string/my_bill"
                   android:gravity="start"
                   android:paddingTop="10dp"
                   android:textAllCaps="true"
                  android:fontFamily="@font/audiowide"
                   android:textSize="35sp"
                   android:textStyle="bold|italic"
                   android:textColor="#6200EA"
                   />

           </LinearLayout>

       </androidx.cardview.widget.CardView>

       <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/show_item_recview"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="13dp"
        android:orientation="vertical"
      />


       <androidx.cardview.widget.CardView
           android:layout_width="match_parent"
           android:layout_height="220dp"
           android:layout_margin="13dp"
           app:cardCornerRadius="7dp"
           app:cardBackgroundColor="#CAF2F8"
           >

           <androidx.constraintlayout.widget.ConstraintLayout
               android:layout_width="match_parent"
               android:layout_height="match_parent"
               >

               <TextView
                   android:id="@+id/textView15"
                   android:layout_width="220dp"
                   android:layout_height="65dp"
                   android:gravity="center"
                   android:text=" total Price  ="
                   android:textAllCaps="true"
                   android:textColor="#FF6200EA"
                   android:textSize="23sp"
                   android:textStyle="bold|italic|normal"
                   app:layout_constraintBottom_toBottomOf="parent"
                   app:layout_constraintStart_toStartOf="parent"
                   app:layout_constraintTop_toTopOf="parent"
                   app:layout_constraintVertical_bias="0.0" />

               <TextView
                   android:id="@+id/bottom_total_price"
                   android:layout_width="166dp"
                   android:layout_height="65dp"
                   android:gravity="center"
                   android:paddingStart="15dp"
                   android:textAllCaps="false"
                   android:textColor="#FF6200EA"
                   android:textSize="23sp"
                   android:textStyle="bold"
                   app:layout_constraintBottom_toBottomOf="parent"
                   app:layout_constraintEnd_toEndOf="parent"
                   app:layout_constraintTop_toTopOf="parent"
                   app:layout_constraintVertical_bias="0.0"
                   tools:ignore="RtlSymmetry" />

               <TextView
                   android:layout_width="wrap_content"
                   android:layout_height="wrap_content"
                   android:layout_marginBottom="72dp"
                   android:gravity="start"
                   android:text="Total price including CGST and SGST:(GST includes 5% each)"
                   android:textAllCaps="true"
                   android:textColor="#FF6200EA"
                   android:textSize="17sp"
                   android:textStyle="bold"
                   app:layout_constraintBottom_toBottomOf="parent"
                   app:layout_constraintEnd_toEndOf="parent"
                   app:layout_constraintHorizontal_bias="1.0"
                   app:layout_constraintStart_toStartOf="parent" />

               <TextView
                   android:layout_width="239dp"
                   android:layout_height="49dp"
                   android:gravity="center"
                   android:text=" total Price+gst ="
                   android:textAllCaps="true"
                   android:textColor="#A60303"
                   android:textSize="23sp"
                   android:textStyle="bold|italic|normal"
                   app:layout_constraintBottom_toBottomOf="parent"
                   app:layout_constraintStart_toStartOf="parent"
                   app:layout_constraintTop_toTopOf="@+id/textView15"
                   app:layout_constraintVertical_bias="1.0" />

               <TextView
                   android:id="@+id/bottom_total_price_including_gst"
                   android:layout_width="144dp"
                   android:layout_height="50dp"
                   android:layout_marginEnd="4dp"
                   android:gravity="center"
                   android:paddingStart="15dp"
                   android:textAllCaps="false"
                   android:textColor="#A60303"
                   android:textSize="23sp"
                   android:textStyle="bold"
                   app:layout_constraintBottom_toBottomOf="parent"
                   app:layout_constraintEnd_toEndOf="parent"
                   app:layout_constraintTop_toTopOf="parent"
                   app:layout_constraintVertical_bias="1.0"
                   tools:ignore="RtlSymmetry" />


           </androidx.constraintlayout.widget.ConstraintLayout>
       </androidx.cardview.widget.CardView>


<androidx.cardview.widget.CardView
    android:layout_width="match_parent"
    android:layout_height="50dp"
    android:layout_marginStart="13dp"
    android:layout_marginBottom="20dp"
    android:layout_marginTop="20dp"
    android:layout_marginEnd="13dp"
    >
       <LinearLayout
           android:layout_width="match_parent"
           android:layout_height="match_parent"
         android:background="#B9E8EF"
           android:orientation="vertical"
           >

           <CheckBox
               android:id="@+id/select_payment_method"
               android:layout_width="match_parent"
               android:layout_height="match_parent"
               android:text="@string/select_payment_method"
               android:textColor="#700AFD"
               android:textSize="23sp"
               android:textAllCaps="true"
               android:textStyle="bold|italic"
               />

       </LinearLayout>
</androidx.cardview.widget.CardView>

       <androidx.cardview.widget.CardView
           android:layout_width="match_parent"
           android:layout_height="80dp"
           android:layout_margin="13dp"
           app:cardCornerRadius="7dp"
           app:cardBackgroundColor="#CAF2F8"
           >

           <FrameLayout
               android:layout_width="match_parent"
               android:layout_height="match_parent"

               >
               <Button
                   android:id="@+id/place_order"
                   android:layout_width="match_parent"
                   android:layout_height="match_parent"
                   android:text="@string/order"
                   android:textSize="20sp"
                   android:textAllCaps="true"
                   android:background="#AEEBF4"
                   android:textStyle="normal|bold"
                   android:textColor="#43059A"
                   >
               </Button>
           </FrameLayout>

       </androidx.cardview.widget.CardView>



   </LinearLayout>
    </ScrollView>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text=""/>

</androidx.cardview.widget.CardView>